# CourceWork4

./: README.md  main.py  pyproject.toml
data/: vacancies.json
src/: classes.py  json_saver.py  vacancy.py
